# dspy-repl

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: deno_example.py  preload_sql_example.py
src/dspy_repl/: __init__.py
src/dspy_repl/benchmarks/: __init__.py  analytics.py  base_runner.py  config.py  logging_utils.py  niah_runner.py  oolong_pairs_runner.py  oolong_runner.py  report_html.py  report_runner.py
src/dspy_repl/compat/: __init__.py
src/dspy_repl/core/: __init__.py  base_rlm.py  code_interpreter.py  repl_types.py
src/dspy_repl/interpreters/: __init__.py  deno_interpreter.py  deno_prelude.ts  haskell_interpreter.py  haskell_prelude.ghci  js_interpreter.py  js_prelude.js  scheme_interpreter.py  scheme_runner.scm  sql_interpreter.py
src/dspy_repl/languages/: __init__.py  deno_rlm.py  haskell_rlm.py  js_rlm.py  scheme_rlm.py  sql_rlm.py
tests/: __init__.py  conftest.py  test_public_api.py
tests/benchmarks/: test_analytics.py  test_base_runner.py  test_niah_runner.py  test_oolong_pairs_runner.py  test_oolong_runner.py  test_report_html.py
tests/helpers/: __init__.py  mock_interpreter.py  predictor_factory.py
tests/integration/: test_live_gemini_repls.py
tests/interpreters/: debug_deno_pipe.py  test_deno_interpreter.py  test_deno_prelude.ts  test_haskell_interpreter.py  test_haskell_interpreter_unit.py  test_js_interpreter.py  test_scheme_interpreter.py  test_sql_interpreter.py  test_sql_preload.py
tests/languages/: test_deno_rlm.py  test_haskell_rlm.py  test_js_rlm.py  test_scheme_rlm.py  test_sql_rlm.py  test_sql_rlm_preload.py
